third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/inf-incomplete-3.stderr
TOML parse error at line 1, column 21
  |
1 | inf-incomplete-3 = -in
  |                     ^
invalid integer
